# S22_Azaan_Ali

./: .gitignore  CMakeLists.txt  Lucid.sln  unique.txt
Lucid/: CMakeLists.txt  Entity.cpp  Entity.h  Lucid.vcxproj  Lucid.vcxproj.filters  LucidApp.cpp  LucidApp.h  main.cpp
Maniac/: CMakeLists.txt  Events.cpp  Events.h  KeyCodes.h  Maniac.h  Maniac.vcxproj  Maniac.vcxproj.filters  ManiacApp.cpp  ManiacApp.h  ManiacUtilities.h  Render.cpp  Render.h  RenderImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  Window.cpp  Window.h  WindowOS.h
Maniac/Assets/Shaders/: defaultFragment.glsl  defaultVertex.glsl
Maniac/specificGLFW/: GLFWWindow.cpp  GLFWWindow.h
Maniac/specificOPENGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
